# hackathon-hive

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.debug.yml  docker-compose.yml  pyproject.toml  requirements.txt
assign_ai/: .env.example  config.py  db.py  main.py  models.py  schemas.py
assign_ai/routes/: hackathons.py  submission.py  users.py
